--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>DERSCHE.id - Derscheid Family Website</title>
+  <title>DERSCHE.id - Family Website</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
@@ -22,157 +22,34 @@
   <script>
   w3IncludeHTML();
   </script>
-  <section id="home-sec">
-    <div class="overlay text-center">
-      <h1 >The Derscheid Family Welcomes You!</h1>
-      <hr class="hr-set"/>
-      <p>Thank you for visiting our homepage.</p>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3 >Home <i class="fa fa-angle-double-right "></i></h3>
     </div>
   </section>
   <!--HOME SECTION END-->
-  <section id="search-domain" >
+  <section>
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
-          <input type="text" class="form-control input-cls">
-        </div>
-        <div class="col-md-5">
-          <input type="button" class="btn btn-info btn-lg btn-set"  value="SEARCH DOMAIN" />
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--SEARCH SECTION END-->
-  <section id="services-sec">
-    <div class="container">
-      <div class="row text-center" >
-        <div class="col-md-4">
-          <i class="fa fa-database fa-5x icon-custom-1 color-1"></i>
-          <h3>Hosting Spaces</h3>
+        <div class="col-md-12" style="min-height:800px;">
+          <br>
           <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-          </p>
-        </div>
-        <div class="col-md-4">
-          <i class="fa fa-globe fa-5x icon-custom-1 color-1"></i>
-          <h3>Domain Register </h3>
-          <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-          </p>
-        </div>
-        <div class="col-md-4">
-          <i class="fa fa-desktop fa-5x icon-custom-1 color-1"></i>
-          <h3>Web Designing</h3>
-          <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
+            <h1>Welcome to the Derscheid Family Website!</h1>
           </p>
         </div>
       </div>
     </div>
   </section>
-  <!--SERVICES SECTION END-->
-  <div id="testimonial-sec">
-    <div class="container">
-      <div class="row ">
-        <div class="col-md-12">
-          <div id="carousel-example" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example" data-slide-to="1"></li>
-              <li data-target="#carousel-example" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="item active">
-                <div class="container center">
-                  <div class="col-md-6 col-md-offset-3 slide-custom">
-                    <h4><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit onec molestie non sem vel condimentum. <i class="fa fa-quote-right"></i></h4>
-                    <div class="user-img pull-right">
-                      <img src="assets/img/user.gif" alt="" class="img-u image-responsive"  />
-                    </div>
-                    <h5 class="pull-right"><strong class="c-black">Lorem Dolor</strong></h5>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="container center">
-                  <div class="col-md-6 col-md-offset-3 slide-custom">
-                    <h4> <i class="fa fa-quote-left"></i> Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. <i class="fa fa-quote-right"></i></h4>
-                    <div class="user-img pull-right">
-                      <img src="assets/img/user2.png" alt="" class="img-u image-responsive"  />
-                    </div>
-                    <h5 class="pull-right"><strong class="c-black">Faucibus luctus</strong></h5>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="container center">
-                  <div class="col-md-6 col-md-offset-3 slide-custom">
-                    <h4><i class="fa fa-quote-left"></i>Sed ultricies, libero ut adipiscing a egestas dui metus a arcu condimentum. <i class="fa fa-quote-right"></i></h4>
-                    <div class="user-img pull-right">
-                      <img src="assets/img/user.gif" alt="" class="img-u image-responsive"  />
-                    </div>
-                    <h5 class="pull-right"><strong class="c-black">Sed ultricies</strong></h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--TESTIMONIAL SECTION END-->
-  <section id="features-sec"  >
-    <div class="container">
-      <div class="row text-center" >
-        <div class="col-md-3">
-          <i class="fa fa-comments-o fa-3x icon-custom-2 color-2"></i>
-          <h4>24x7 SUPPORT</h4>
-          <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-          </p>
-        </div>
-        <div class="col-md-3">
-          <i class="fa fa-rocket fa-3x icon-custom-2 color-2"></i>
-          <h4>Ultra Fast </h4>
-          <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-          </p>
-        </div>
-        <div class="col-md-3">
-          <i class="fa fa-bars fa-3x icon-custom-2 color-2"></i>
-          <h4>Fast Response</h4>
-          <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-          </p>
-        </div>
-        <div class="col-md-3">
-          <i class="fa fa-table fa-3x icon-custom-2 color-2"></i>
-          <h4>Customizable</h4>
-          <p>
-            Nunc at viverra risus.
-            In euismod quam ac dictum varius.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--FEATURES SECTION END-->
   <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
+  <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
+  <!-- CORE JQUERY  -->
+  <script src="assets/js/jquery-1.11.1.js"></script>
+  <!-- BOOTSTRAP SCRIPTS  -->
+  <script src="assets/js/bootstrap.js"></script>
+  <!-- CUSTOM SCRIPTS  -->
+  <script src="assets/js/custom.js"></script>
 </body>
 </html>
